--- a/ColorViewer/MainWindow.xaml
+++ b/ColorViewer/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel>
-            
+            <TextBlock Text="{local:TodayExtention}" />
         </StackPanel>
     </Grid>
 </Metro:MetroWindow>
