--- a/ColorViewer/CustomStyles/ColorViewerStyles.xaml
+++ b/ColorViewer/CustomStyles/ColorViewerStyles.xaml
@@ -12,7 +12,13 @@
 
     <Style x:Key="ColorName" BasedOn="{StaticResource MainText}" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Right" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
+
+    <Style x:Key="ListColorName" BasedOn="{StaticResource ColorName}" TargetType="TextBlock">
+        <Setter Property="MinWidth" Value="100" />
+    </Style>
+
     <Style x:Key="ColorValue" TargetType="TextBox">
         <Setter Property="HorizontalAlignment" Value="Left" />
     </Style>
@@ -26,14 +32,36 @@
     <Style TargetType="Slider" BasedOn="{StaticResource MetroSlider}">
         <Setter Property="Maximum" Value="255" />
         <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="10 0" />
     </Style>
 
     <Style x:Key="NumUpDown" TargetType="Control">
         <Setter Property="FontSize" Value="14" />
+        <Setter Property="Margin" Value="0 10" />
     </Style>
 
     <Style x:Key="ColorList" TargetType="DockPanel">
-        <Setter Property="Margin" Value="5" />
+        <Setter Property="Margin" Value="5"/>
     </Style>
 
+    <Style x:Key="HexText" TargetType="TextBlock">
+        <Setter Property="Text" Value="Color hex code:"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Margin" Value="0 0 15 0"/>
+    </Style>
+
+    <Style x:Key="Btn" TargetType="Button" BasedOn="{StaticResource MetroButton}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Background" Value="#D3D9FB"/>
+    </Style>
+
+    <Style x:Key="AddBtn" TargetType="Button" BasedOn="{StaticResource Btn}">
+        <Setter Property="Margin" Value="0 0 5 0"/>
+        <Setter Property="Foreground" Value="#004000" />
+    </Style>
+
+    <Style x:Key="RemBtn" TargetType="Button" BasedOn="{StaticResource Btn}">
+        <Setter Property="Margin" Value="5 0 0 0"/>
+        <Setter Property="Foreground" Value="#004000" />
+    </Style>
 </ResourceDictionary>
